# zank

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  fly.toml
Backend/: app.py  pyproject.toml  requirements.txt
Backend/agents/: context.py  finance_agent.py  tools.py
Backend/backend/: app.py
Backend/backend/agents/: context.py  finance_agent.py  tools.py
Backend/backend/core/: database.py  settings.py
Backend/backend/middleware/: security.py
Backend/backend/models/: MetasSchemas.py  UserSchema.py  models.py  webhook.py
Backend/backend/routers/: auth.py  bot.py  categorias.py  gastos.py  metas.py  users.py  webhook.py
Backend/backend/services/: mapping_service.py  whatsapp_service.py
Backend/backend/utils/: utils.py
Backend/core/: database.py  mensagens.py  settings.py
Backend/middleware/: security.py
Backend/migrations/: env.py
Backend/migrations/versions/: 4bbfd9b9c2a7_added_columns_in_user_table.py  63532f56720e_initial_migration_postgres.py
Backend/models/: CategoriaSchema.py  Filters.py  GastosSchema.py  Mensages.py  TokenSchema.py  models.py
Backend/routers/: auth.py  bot.py  categorias.py  gastos.py  metas.py  stripe.py  users.py  webhook.py
Backend/services/: mapping_service.py  whatsapp_service.py
Backend/tests/: conftest.py
Backend/tests/integration/: test_db.py
Backend/tests/routers/: conftest.py  test_app.py  test_auth.py  test_categoria.py  test_gastos.py  test_metas.py  test_users.py
Backend/tests/unit/: test_security.py
Backend/utils/: utils.py
routers/: webhook.py
services/: mapping_service.py  whatsapp_service.py
